--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
     <pre>
             new MiniSlider({
                 el:document.querySelector("#slider2"),
+                loop:false
             });
     </pre>
     
     <script>
          new MiniSlider({
              el:document.querySelector("#slider2"),
+             loop:false
          });
     </script>
 </body>
