--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MiniSldier</title>
     <style>
+        body,html{margin:0;padding:0;}
+        
           .slider-wrap{position:relative;max-width:360px;max-height:220px;width:100%;height:100vw;margin:1em auto;overflow:hidden;}
           .slider-list{position:absolute;width:100%;height:100%;margin:0;padding:0;list-style-type: none;}
           .slider-list.anim{transition:.5s;}
