--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body,html{margin:0;padding:0;}
         
-          .slider-wrap{position:relative;max-width:360px;max-height:220px;width:100%;height:100vw;margin:1em auto;overflow:hidden;background-color:#CCC;}
+          .slider-wrap{position:relative;max-width:360px;max-height:220px;width:100%;height:100vw;margin:1em auto;overflow:hidden;border:1px soild #CCC;}
           .slider-list{position:absolute;width:100%;height:100%;margin:0;padding:0;list-style-type: none;}
           .slider-list.anim{transition:.5s;}
           .slider-item{position:absolute;width:100%;height:100%;}
